# autotools

./: README.md
project1/: Makefile.am  README.md  configure.ac
project1/src/: Makefile.am  main.c
