# src/Makefile.am
#{WHERE}_{PRIMARY} variables
#bin_PROGRAMS = WHERE is bin directory, PRIMARY is PROGRAMS
bin_PROGRAMS = project1 #Specifies that the program is a binary executable called project1.

#{TARGET}_{SPECIFICS} variables
project1_SOURCES = main.c #Lists the source files needed to build project1.